--- a/.github/workflows/build-and-package-rust-binary.yaml
+++ b/.github/workflows/build-and-package-rust-binary.yaml
@@ -5,17 +5,19 @@ on:
     branches: [ main ]
 
 jobs:
-  build-release-build-and-push-docker-image:
+  build-release:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: ⚡ Cache
-      uses: actions/cache@v3.0.11
+      uses: actions/cache@v3
       with:
         path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Set up Rust
@@ -24,6 +26,20 @@ jobs:
         rust-version: stable
     - name: Build Rust binary
       run: cd rust && cargo build --release --bin back-up-drive-folder
+    - uses: actions/upload-artifact@v3
+      with:
+        name: back-up-drive-folder
+        path: ./rust/target/x86_64-unknown-linux-gnu/release/back-up-drive-folder
+
+  build-and-push-docker-image:
+    runs-on: ubuntu-latest
+    needs: build-release
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/download-artifact@v3
+      with:
+        name: back-up-drive-folder
+        path: ./rust/target/x86_64-unknown-linux-gnu/release/back-up-drive-folder
 
     - name: Build and publish Docker Images to GitHub Container registry
       uses: VaultVulp/gp-docker-action@1.5.0
